2000-11-21  Johannes Zellner  <johannes@zellner.org>

	* src/gplt_x11.c: added a few ifdefs, so it compiles w/o mouse/pm3d.

2000-11-20  Johannes Zellner  <johannes@zellner.org>

	* term/x11.trm,src/gplt_x11.c: `set palette maxcolors' for x11
	as requested by Petr.

2000-11-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/mouse.c (MousePosToGraphPosReal): fix typo in treatment of
 	logarithmic y axis values.

2000-11-20  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/: color.c pm3d.c term.c term_api.h
	  term/: epslatex.trm pslatex.trm post.trm
	  pm3d: added 'FILE *postscript_gpoutfile' which is set to 
	  'PSLATEX_auxfile' or 'gpoutfile' or '0' according to 'set term',
	  i.e. to the file where the postscript code goes to (if outputted).
	  Condition 'if (!postscript_gpoutfile)' can be used to distinguish 
	  postscript terminals family (used in postscript optimized output
	  in pm3d).

	* src/pm3d.c: bugfix crash when plotting surface with 1 scan only

	* src/mouse.c: disable changing 3D view and scale during 'set pm3d map'

2000-11-15  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/graphics.c (map_position_double): added back a missing 'break'.

2000-11-15  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/command.c (help_command): [_Windows] fixed off-by-one error
 	in help topic determination.

2000-11-15  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/color.h src/getcolor.c src/color.c src/show.c term/post.trm:
	  pm3d --- move PostScriptColorFormulae from post.trm to getcolor.c and
	  rename them to ps_math_color_formulae

	* src/getcolor.h: pm3d --- new file, declarations for getcolor.c

	* term/epslatex.trm: pm3d --- removed pm3d code from epslatex.trm which
	  duplicated the code in post.trm, and call the particular ps.trm 
	  functions instead

2000-11-14  Petr Mikulik  <mikulik@physics.muni.cz>

	* make the branched version compile under OS/2

2000-11-12  James R. Van Zandt  <jrv@vanzandt.mv.com>
