@@ -1,3 +1,7 @@
+2000-11-21  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* src/mouse.c: don't zoom x2 and y2 axes when in 3D plot
+
 2000-11-21  Johannes Zellner  <johannes@zellner.org>
 
 	* src/gplt_x11.c: added a few ifdefs, so it compiles w/o mouse/pm3d.
